refac: change css style

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -12,6 +12,6 @@
     "password": "Password",
     "name": "Name",
     "surname": "Surname",
-    "role": "Role",
+    "roles": "Role",
     "password_confirmation": "Password confirmation"
 }
