feat: all changes

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -2,6 +2,7 @@
     "admin": "Admin",
     "logout": "Logout",
     "products": "Catalog",
+    "configurations": "Configurations",
     "registration": "Registration",
     "addProducts": "Create",
     "main": "Main",
