--- a/src/i18n/langs/es.json
+++ b/src/i18n/langs/es.json
@@ -2,6 +2,7 @@
     "admin": "Admin",
     "logout": "Logout",
     "products": "Catalogo",
+    "configurations": "Configuración",
     "registration": "Registración",
     "addProducts": "Crear",
     "main": "Inicio",
