--- a/src/i18n/langs/ru.json
+++ b/src/i18n/langs/ru.json
@@ -2,6 +2,7 @@
     "admin": "Админ",
     "logout": "Выйти",
     "products": "Каталог",
+    "configurations": "Конфигурации",
     "registration": "Регистрация",
     "addProducts": "Добавить",
     "main": "Главная",
