ref: products - crud

--- a/src/i18n/langs/en.json
+++ b/src/i18n/langs/en.json
@@ -18,5 +18,9 @@
     "roles": "Role",
     "password_confirmation": "Password confirmation",
     "edit": "Edit",
-    "delete": "Delete"
+    "delete": "Delete",
+    "collection": "Colection",
+    "category": "Category",
+    "description": "Description",
+    "price": "Price"
 }
